Closed Bug 1692199 Opened 3 years ago Closed 3 years ago

Perma dom/tests/mochitest/general/test_interfaces.html | If this is failing: DANGER, are you sure you want to expose the new interface EventCounts to all webpages as a property on the window? when Gecko 87 merges to Beta on 2021-02-22

Categories

(Core :: Performance, defect)

defect

Tracking

()

VERIFIED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox85 --- unaffected
firefox86 --- unaffected
firefox87 + verified

People

(Reporter: aryx, Assigned: sefeng)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

TEST-UNEXPECTED-FAIL | dom/tests/mochitest/general/test_interfaces.html | If this is failing: DANGER, are you sure you want to expose the new interface EventCounts to all webpages as a property on the window? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)
TEST-UNEXPECTED-FAIL | dom/tests/mochitest/general/test_interfaces_secureContext.html | If this is failing: DANGER, are you sure you want to expose the new interface EventCounts to all webpages as a property on the window? Do not make a change to this file without a review from a DOM peer for that specific change!!! (or a JS peer for changes to ecmaGlobals)

Flags: needinfo?(sefeng)

Upon the construction of eventCounts, a wrapper of it will be created
because we set the initial values to 0. This exposes the interface
despite the pref is not set.

Assignee: nobody → sefeng
Status: NEW → ASSIGNED

The test expects EventCounts to exist which the pref is required.

Depends on D104872

Attachment #9202884 - Attachment is obsolete: true
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/44a4bda1f823
Performance object shouldn't create eventCounts when the pref is not set r=smaug,aryx
https://hg.mozilla.org/integration/autoland/rev/f11b8cb09ec6
Make test_toJSON.html to not throw if EventCounts isn't defined r=smaug
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch

The central-as-beta simulation used an old central revision.

Status: REOPENED → RESOLVED
Closed: 3 years ago3 years ago
Flags: needinfo?(sefeng)
Resolution: --- → FIXED
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: