Bug 1692199 - Performance object shouldn't create eventCounts when the pref is not set r=smaug,aryx

Upon the construction of `eventCounts`, a wrapper of it will be created
because we set the initial values to 0. This exposes the interface
despite the pref is not set.

Differential Revision: https://phabricator.services.mozilla.com/D104872